2006-07-06  Jim Hyslop <jhyslop@dreampossible.ca>

	* config.h.in: restored HAVE_NDIR_H (it's required for Windows builds).

2006-06-29  Derek Price  <derek@ximbiot.com>

	* NEWS: Note trailing slash fix.

	* configure.in:  Remove support for Interactive Unix (ISC) that
	Autoconf 2.60 reports as obsolescent.  Try to force C99, then C89.
	Allow assertions to be disabled at configure time.

2006-06-28  Larry Jones  <lawrence.jones@ugs.com>

	* HACKING, NEWS: Note new Autoconf version.
	* configure.in (AC_PREREQ): Require Autoconf 2.60.
	* config.h.in, configure, **/Makefile.in: Regenerated.

2006-06-28  Derek Price  <derek@ximbiot.com>

	* configure.in: Remove some macros marked obsolescent with the 2.60
	release of Autoconf, not because Autoconf provides replacements but
	just because the problems are for systems so old that it is believed
	the calls are no longer needed.

	[bug #16961]
	* NEWS: Note double-free fix.

2006-06-27  Mark D. Baushke  <mdb@gnu.org>

	* configure: Regenerated.

2006-06-26  Mark D. Baushke  <mdb@gnu.org>

	* Makefile.in, configure: Regenerated.

2006-06-26  Mark D. Baushke  <mdb@gnu.org>

	* NEWS: Revert last change about valid characters in tag testing.

2006-06-26  Derek Price  <derek@ximbiot.com>

	* configure.in: Define POPEN_BINARY_FLAG.

2006-06-24  Jim Hyslop <jhyslop@dreampossible.ca>

	* NEWS: Added note about bug fix to test for invalid characters in
	tags.

2006-06-23  Larry Jones  <lawrence.jones@ugs.com>

	* configure: Regenerated.

2006-06-23  Mark D. Baushke  <mdb@gnu.org>

	* configure: Regenerated.

2006-06-22  Mark D. Baushke  <mdb@gnu.org>

	* config.h.in: Update from gnulib.
	* configure: Regenerated.

2006-06-22  Jim Hyslop <jhyslop@dreampossible.ca>

	* cvsnt.dsp: Add Windows-specific implementation of strtoimax()
	and strtoumax()
	* cvsnt.dep, cvsnt.mak: regenerated from cvsnt.dsp changes

2006-06-19  Mark D. Baushke  <mdb@gnu.org>

	* Makefile.in, aclocal.m4, config.h.in, configure: Regenerated.
