@@ -45,7 +45,7 @@
 	".\src\wrapper.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -97,7 +97,7 @@
 	".\src\wrapper.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -147,7 +147,7 @@
 	".\src\vers_ts.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -197,7 +197,7 @@
 	".\src\vers_ts.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -246,7 +246,7 @@
 	".\src\vers_ts.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -307,7 +307,7 @@
 	".\src\wrapper.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -359,7 +359,7 @@
 	".\src\wrapper.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -409,7 +409,7 @@
 	".\src\vers_ts.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -475,7 +475,7 @@
 	".\src\wrapper.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -533,7 +533,7 @@
 	".\src\wrapper.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -582,7 +582,7 @@
 	".\src\vers_ts.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -631,7 +631,7 @@
 	".\src\vers_ts.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -684,7 +684,7 @@
 	".\src\wrapper.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -714,11 +714,19 @@
 	".\src\verify.h"\
 	".\src\vers_ts.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\pwd.h"\
 	".\windows-NT\stdbool.h"\
 	".\windows-NT\stdint.h"\
 	".\windows-NT\unistd.h"\
+	".\windows-NT\woe32.h"\
+	
+
+".\windows-NT\dirent.c" : \
+	".\lib\timespec.h"\
+	".\lib\xalloc.h"\
+	".\windows-NT\config.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\woe32.h"\
 	
 
@@ -768,7 +776,7 @@
 	".\src\watch.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -818,7 +826,7 @@
 	".\src\vers_ts.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -867,7 +875,7 @@
 	".\src\vers_ts.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -915,7 +923,7 @@
 	".\src\vers_ts.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -963,7 +971,7 @@
 	".\src\vers_ts.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -1014,7 +1022,7 @@
 	".\src\vers_ts.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -1063,8 +1071,8 @@
 	".\src\vers_ts.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\JmgStat.h"\
-	".\windows-NT\ndir.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -1115,7 +1123,7 @@
 	".\src\vers_ts.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -1180,7 +1188,7 @@
 	".\src\vers_ts.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -1232,7 +1240,7 @@
 	".\src\vers_ts.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -1284,7 +1292,7 @@
 	".\src\wrapper.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -1339,7 +1347,7 @@
 	".\src\wrapper.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -1394,7 +1402,7 @@
 	".\src\vers_ts.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -1443,7 +1451,7 @@
 	".\src\vers_ts.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -1497,7 +1505,7 @@
 	".\src\wrapper.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -1547,7 +1555,7 @@
 	".\src\vers_ts.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -1599,7 +1607,7 @@
 	".\src\vers_ts.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -1650,7 +1658,7 @@
 	".\src\wrapper.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -1705,7 +1713,7 @@
 	".\src\vers_ts.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -1753,7 +1761,7 @@
 	".\src\vers_ts.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -1805,7 +1813,7 @@
 	".\src\vers_ts.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -1855,7 +1863,7 @@
 	".\src\vers_ts.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -1905,7 +1913,7 @@
 	".\src\vers_ts.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -1914,11 +1922,6 @@
 	".\windows-NT\sys\socket.h"\
 	".\windows-NT\unistd.h"\
 	".\windows-NT\woe32.h"\
-	
-
-".\windows-NT\ndir.c" : \
-	".\lib\xalloc.h"\
-	".\windows-NT\ndir.h"\
 	
 
 .\src\no_diff.c : \
@@ -1939,7 +1942,7 @@
 	".\src\vers_ts.h"\
 	".\src\wrapper.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\pwd.h"\
 	".\windows-NT\stdbool.h"\
 	".\windows-NT\stdint.h"\
@@ -1987,7 +1990,7 @@
 	".\src\vers_ts.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -2038,7 +2041,7 @@
 	".\src\vers_ts.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -2094,7 +2097,7 @@
 	".\src\vers_ts.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -2149,7 +2152,7 @@
 	".\src\vers_ts.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -2199,7 +2202,7 @@
 	".\src\vers_ts.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -2253,7 +2256,7 @@
 	".\src\wrapper.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -2305,7 +2308,7 @@
 	".\src\vers_ts.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -2356,7 +2359,7 @@
 	".\src\wrapper.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -2406,7 +2409,7 @@
 	".\src\vers_ts.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -2456,7 +2459,7 @@
 	".\src\vers_ts.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -2506,7 +2509,7 @@
 	".\src\vers_ts.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -2554,7 +2557,7 @@
 	".\src\vers_ts.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -2602,7 +2605,7 @@
 	".\src\vers_ts.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -2666,7 +2669,7 @@
 	".\src\wrapper.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -2756,7 +2759,7 @@
 	".\src\vers_ts.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -2804,7 +2807,7 @@
 	".\src\vers_ts.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -2852,7 +2855,7 @@
 	".\src\vers_ts.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -2905,7 +2908,7 @@
 	".\src\wrapper.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -2971,7 +2974,7 @@
 	".\src\wrapper.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -3024,7 +3027,7 @@
 	".\src\vers_ts.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -3091,7 +3094,7 @@
 	".\src\wrapper.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -3129,7 +3132,7 @@
 	".\src\verify.h"\
 	".\src\vers_ts.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\pwd.h"\
 	".\windows-NT\stdbool.h"\
 	".\windows-NT\stdint.h"\
@@ -3175,7 +3178,7 @@
 	".\src\vers_ts.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -3223,7 +3226,7 @@
 	".\src\vers_ts.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -3282,7 +3285,7 @@
 	".\src\watch.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -3341,7 +3344,7 @@
 	".\src\wrapper.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
@@ -3390,7 +3393,7 @@
 	".\src\vers_ts.h"\
 	".\windows-nt\arpa\inet.h"\
 	".\windows-NT\config.h"\
-	".\windows-NT\ndir.h"\
+	".\windows-NT\dirent.h"\
 	".\windows-NT\netdb.h"\
 	".\windows-nt\netinet\in.h"\
 	".\windows-NT\pwd.h"\
