@@ -1,3 +1,9 @@
+2006-07-10  Jim Hyslop <jhyslop@dreampossible.ca>
+
+	* cvsnt.dsp: remove windows-NT/ndir.(c,h), added 
+	windows-NT/dirent.(c,h), per Derek Price's patch
+	* cvsnt.dep, cvsnt.mak: regenerated
+
 2006-07-06  Jim Hyslop <jhyslop@dreampossible.ca>
 
 	* config.h.in: restored HAVE_NDIR_H (it's required for Windows builds).
